GoalTracker/force-app/main/default/objects/Marketing_Preference_Setting__mdt/Marketing_Preference_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Marketing Preference Setting</label>
    <pluralLabel>Marketing Preference Settings</pluralLabel>
</CustomObject>