GoalTracker/force-app/main/default/objects/Marketing_Preference_Setting__mdt/fields/Chatter_Groups__c.field-meta.xml
<CustomField>
    <fullName>Chatter_Groups__c</fullName>
    <label>Chatter Groups</label>
    <length>255</length>
    <type>Text</type>
</CustomField>