GoalTracker/force-app/main/default/objects/Marketing_Preference_Setting__mdt/fields/Preference_Field__c.field-meta.xml
<CustomField>
    <fullName>Preference_Field__c</fullName>
    <label>Preference Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>