GoalTracker/force-app/main/default/objects/Marketing_Preference_Setting__mdt/fields/Topics__c.field-meta.xml
<CustomField>
    <fullName>Topics__c</fullName>
    <label>Topics</label>
    <length>255</length>
    <type>Text</type>
</CustomField>